--- a/style.css
+++ b/style.css
@@ -4,11 +4,19 @@
    box-sizing: border-box; 
 }
 body{
+    width:100%;
+    height: 100vh;
     background-color:black;
 }
+main{
+    width:1200px;
+    min-height: 1200px;
+    display: flex;
+    flex-direction: column;
+}
 form{
-    width:900px;
-    height: 100px;
+    width:100%;
+    height: 200px;
     display: flex;
     flex-direction:row; 
     justify-content: space-between;
@@ -19,8 +27,46 @@ form img{
    background-color: #151d2f;
 }
 .search{
-    width:500px;
-    height: 40px;
+    width:400px;
+    height: 60px;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 40px;
+    background: linear-gradient(purple,orangered);
+    border-radius: 40px;
 }
+#search-input{
+    width:350px;
+    height:60px;
+    outline: none;
+    border:none;
+    background: transparent;
+    font-weight: 400px;
+    font-size: 36px;
+    padding:5px 30px;
+    color:aliceblue;
+}
+.search i{
+    width:50px;
+    height:50px;
+    margin-right: 50px;
+    margin-top: 30px;
+}
+.display{
+    width:100%;
+    height: 900px;
+}
+.giphy-ul{
+    display:grid;
+    grid-template-columns: auto auto auto;
+    grid-template-row: auto auto auto;
+    gap:50px 100px;
+    padding: 10px;
+}
+.giphy-li{
+    list-style:none;
+    padding: 20px;
+}
+
